update main page

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,5 +24,15 @@
     <string name="video_yule">娱乐</string>
     <string name="video_gaoxiao">搞笑</string>
     <string name="video_jingpin">精品</string>
+    <!-- 下拉刷新  end -->
+    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
+    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
+    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
+    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
+    <string name="drop_down_list_footer_default_text"></string>
+    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
+    <string name="drop_down_list_footer_no_more_text">无更多信息</string>
+    <string name="image_content">Image</string>
+    <!-- 下拉刷新  end -->
 
 </resources>
